--- a/.github/workflows/Make.yml
+++ b/.github/workflows/Make.yml
@@ -10,7 +10,7 @@ on:
       LIBRARY_BRANCH:
         description: 'LIBRARY_BRANCH'
         required: true
-        default: 'twrp-10.0-deprecated'
+        default: 'twrp-9.0'
       LIBRARY_TYPE:
         description: 'LIBRARY_TYPE'
         required: false
